added processed csvs for phx data

--- a/crime_data_processed/Pheonix_City/ReadCrimeData.ipynb
+++ b/crime_data_processed/Pheonix_City/ReadCrimeData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "4           279XX N 23RD LN  85085.0  SINGLE FAMILY HOUSE  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "190219"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "01/02/2017        0      0  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
        "4        15  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pheonix_by_date[crimes].sum().to_csv('')\n",
+    "pheonix_by_hour[crimes].sum().to_csv('')"
+   ]
   }
  ],
  "metadata": {
