--- a/crime_data_processed/Philadelphia/Philadephia.ipynb
+++ b/crime_data_processed/Philadelphia/Philadephia.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "# Depencencies and setup\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -164,20 +166,21 @@
        "4               8.0  2009-06 -75.166350  39.969532  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "philly_df = pd.read_csv('../../crime_data_raw/Philadelphia/crime_data_philadelphia.csv.gz')\n",
+    "# Read and have a peek at our raw data\n",
+    "philly_df = pd.read_csv('C:/data/crime_date_raw/Philadelphia/crime_data_philadelphia.csv.gz')\n",
     "\n",
     "philly_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +189,7 @@
        "2237605"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +209,7 @@
        "'2006-01-01'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +229,7 @@
        "'2017-03-23'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,36 +240,257 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the categories from this data set \n",
+    "cats = philly_df['Text_General_Code'].unique()\n",
+    "cats_df = pd.DataFrame({'Text_General_Code' : cats})\n",
+    "cats_df.to_csv('categories.csv')\n",
+    "\n",
+    "# Here, we stop and edit 'category_keys.csv' in MS Excel..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Dc_Dist</th>\n",
+       "      <th>Psa</th>\n",
+       "      <th>Dispatch_Date_Time</th>\n",
+       "      <th>Dispatch_Date</th>\n",
+       "      <th>Dispatch_Time</th>\n",
+       "      <th>Hour</th>\n",
+       "      <th>Dc_Key</th>\n",
+       "      <th>Location_Block</th>\n",
+       "      <th>UCR_General</th>\n",
+       "      <th>Text_General_Code</th>\n",
+       "      <th>Police_Districts</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Lon</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Category Final</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2009-10-02 14:24:00</td>\n",
+       "      <td>2009-10-02</td>\n",
+       "      <td>14:24:00</td>\n",
+       "      <td>14</td>\n",
+       "      <td>200918067518</td>\n",
+       "      <td>S 38TH ST  / MARKETUT ST</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>Other Assaults</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2009-10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>AGGRAVATED ASSAULT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>25</td>\n",
+       "      <td>J</td>\n",
+       "      <td>2009-08-07 15:40:00</td>\n",
+       "      <td>2009-08-07</td>\n",
+       "      <td>15:40:00</td>\n",
+       "      <td>15</td>\n",
+       "      <td>200925083199</td>\n",
+       "      <td>6TH CAMBRIA</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>Other Assaults</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2009-08</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>AGGRAVATED ASSAULT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>23</td>\n",
+       "      <td>K</td>\n",
+       "      <td>2009-02-10 14:33:00</td>\n",
+       "      <td>2009-02-10</td>\n",
+       "      <td>14:33:00</td>\n",
+       "      <td>14</td>\n",
+       "      <td>200923006310</td>\n",
+       "      <td>2200 BLOCK RIDGE AVE</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>Other Assaults</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>2009-02</td>\n",
+       "      <td>-75.171149</td>\n",
+       "      <td>39.979586</td>\n",
+       "      <td>AGGRAVATED ASSAULT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>J</td>\n",
+       "      <td>2009-02-09 22:52:00</td>\n",
+       "      <td>2009-02-09</td>\n",
+       "      <td>22:52:00</td>\n",
+       "      <td>22</td>\n",
+       "      <td>200901004250</td>\n",
+       "      <td>2700 BLOCK / 2720 / 2729  WOLF ST</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>Other Assaults</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2009-02</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>AGGRAVATED ASSAULT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015-08-23 01:58:00</td>\n",
+       "      <td>2015-08-23</td>\n",
+       "      <td>01:58:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>201524080438</td>\n",
+       "      <td>3000 BLOCK B ST</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>Other Assaults</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>2015-08</td>\n",
+       "      <td>-75.125869</td>\n",
+       "      <td>39.995626</td>\n",
+       "      <td>AGGRAVATED ASSAULT</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array(['Other Assaults', 'All Other Offenses', 'Weapon Violations',\n",
-       "       'Thefts', 'Burglary Non-Residential', 'Aggravated Assault Firearm',\n",
-       "       'Theft from Vehicle', 'Disorderly Conduct',\n",
-       "       'Vandalism/Criminal Mischief', 'Arson', 'Fraud',\n",
-       "       'Robbery No Firearm', 'Vagrancy/Loitering', 'Motor Vehicle Theft',\n",
-       "       'Recovered Stolen Motor Vehicle', 'Robbery Firearm',\n",
-       "       'Embezzlement', 'Rape', 'DRIVING UNDER THE INFLUENCE',\n",
-       "       'Forgery and Counterfeiting', 'Narcotic / Drug Law Violations',\n",
-       "       'Burglary Residential', 'Other Sex Offenses (Not Commercialized)',\n",
-       "       'Liquor Law Violations', 'Aggravated Assault No Firearm',\n",
-       "       'Homicide - Criminal', 'Gambling Violations',\n",
-       "       'Prostitution and Commercialized Vice', 'Public Drunkenness',\n",
-       "       'Receiving Stolen Property', 'Homicide - Gross Negligence',\n",
-       "       'Offenses Against Family and Children', 'Homicide - Justifiable',\n",
-       "       nan], dtype=object)"
+       "   Dc_Dist Psa   Dispatch_Date_Time Dispatch_Date Dispatch_Time  Hour  \\\n",
+       "0       18   3  2009-10-02 14:24:00    2009-10-02      14:24:00    14   \n",
+       "1       25   J  2009-08-07 15:40:00    2009-08-07      15:40:00    15   \n",
+       "2       23   K  2009-02-10 14:33:00    2009-02-10      14:33:00    14   \n",
+       "3        1   J  2009-02-09 22:52:00    2009-02-09      22:52:00    22   \n",
+       "4       24   2  2015-08-23 01:58:00    2015-08-23      01:58:00     1   \n",
+       "\n",
+       "         Dc_Key                     Location_Block  UCR_General  \\\n",
+       "0  200918067518           S 38TH ST  / MARKETUT ST        800.0   \n",
+       "1  200925083199                        6TH CAMBRIA        800.0   \n",
+       "2  200923006310               2200 BLOCK RIDGE AVE        800.0   \n",
+       "3  200901004250  2700 BLOCK / 2720 / 2729  WOLF ST        800.0   \n",
+       "4  201524080438                    3000 BLOCK B ST        800.0   \n",
+       "\n",
+       "  Text_General_Code  Police_Districts    Month        Lon        Lat  \\\n",
+       "0    Other Assaults               NaN  2009-10        NaN        NaN   \n",
+       "1    Other Assaults               NaN  2009-08        NaN        NaN   \n",
+       "2    Other Assaults              16.0  2009-02 -75.171149  39.979586   \n",
+       "3    Other Assaults               NaN  2009-02        NaN        NaN   \n",
+       "4    Other Assaults              17.0  2015-08 -75.125869  39.995626   \n",
+       "\n",
+       "       Category Final  \n",
+       "0  AGGRAVATED ASSAULT  \n",
+       "1  AGGRAVATED ASSAULT  \n",
+       "2  AGGRAVATED ASSAULT  \n",
+       "3  AGGRAVATED ASSAULT  \n",
+       "4  AGGRAVATED ASSAULT  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "philly_df['Text_General_Code'].unique()"
+    "# Merge our new column into our data set\n",
+    "cat_keys = pd.read_csv('category_keys.csv')\n",
+    "philly_short_cats = pd.merge(philly_df, cat_keys, on='Text_General_Code')\n",
+    "\n",
+    "philly_short_cats.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crimes = philly_short_cats['Category Final'].unique()\n",
+    "\n",
+    "# Add columns for each crime category, 0 = crime is not this category, 1 = crime is this category\n",
+    "for c in crimes:\n",
+    "    philly_short_cats[c] = philly_short_cats['Category Final'].apply(lambda s: int(s==c))\n",
+    "    \n",
+    "# Group by date and export the counts to csv\n",
+    "philly_by_date = philly_short_cats.groupby(['Dispatch_Date'])\n",
+    "philly_by_date[crimes].sum().to_csv('philly_by_date.csv')\n",
+    "\n",
+    "# Group by hour of the day and export the counts to csv\n",
+    "philly_by_hour = philly_short_cats.groupby(['Hour'])\n",
+    "philly_by_hour[crimes].sum().to_csv('philly_by_hour.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clean the data further to see seasonal effects\n",
+    "philly_by_season = pd.read_csv('philly_by_date.csv')\n",
+    "\n",
+    "# Assume date format is yyyy-mm-dd, drop the year, also return nan if it's 2017 since we don't have a full year\n",
+    "def clean_days(d):\n",
+    "    if '2017' in d:\n",
+    "        return np.nan\n",
+    "    else:\n",
+    "        return d[5:]\n",
+    "\n",
+    "philly_by_season['Day'] = philly_by_season['Dispatch_Date'].apply(clean_days)\n",
+    "philly_by_season.dropna(inplace=True)\n",
+    "philly_by_season = philly_by_season.groupby('Day')\n",
+    "\n",
+    "# This gives us the average number of each crime category committed on each date\n",
+    "n_years = 2017 - 2006\n",
+    "philly_by_season.sum().apply(lambda div_year: div_year / n_years).to_csv('philly_by_season_2006_to_2016.csv')"
    ]
   },
   {
