--- a/Seattle/ProcessSeattleData.ipynb
+++ b/Seattle/ProcessSeattleData.ipynb
@@ -24,18 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# File to Load\n",
-    "csv_path = \"../Data_folder/Crime_Data_seattle_2015.csv\"\n",
+    "csv_path = \"../../Data_folder/Crime_Data_seattle_2015.csv\"\n",
     "data_file = pd.read_csv(csv_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -172,7 +172,7 @@
        "4             BELLTOWN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "188481"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "4  FAMILY OFFENSE-NONVIOLENT                                   MISC"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "4             BELLTOWN                                   RAPE  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,10 +508,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AGGRAVATED ASSAULT</th>\n",
+       "      <th>DRUG OFFENSE</th>\n",
+       "      <th>MURDER AND NON-NEGLIGENT MANSLAUGHTER</th>\n",
+       "      <th>RAPE</th>\n",
+       "      <th>MISC</th>\n",
+       "      <th>BURGLARY</th>\n",
+       "      <th>LARCENY-THEFT</th>\n",
+       "      <th>MOTOR VEHICLE THEFT</th>\n",
+       "      <th>ARSON</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Occurred Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2015-01-01</th>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>45</td>\n",
+       "      <td>26</td>\n",
+       "      <td>54</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-02</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>35</td>\n",
+       "      <td>15</td>\n",
+       "      <td>28</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-03</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>39</td>\n",
+       "      <td>19</td>\n",
+       "      <td>27</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-04</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>45</td>\n",
+       "      <td>14</td>\n",
+       "      <td>27</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-05</th>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>56</td>\n",
+       "      <td>18</td>\n",
+       "      <td>30</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               AGGRAVATED ASSAULT  DRUG OFFENSE  \\\n",
+       "Occurred Date                                     \n",
+       "2015-01-01                     10             4   \n",
+       "2015-01-02                      2             5   \n",
+       "2015-01-03                      1             4   \n",
+       "2015-01-04                      5             3   \n",
+       "2015-01-05                      0             5   \n",
+       "\n",
+       "               MURDER AND NON-NEGLIGENT MANSLAUGHTER  RAPE  MISC  BURGLARY  \\\n",
+       "Occurred Date                                                                \n",
+       "2015-01-01                                         0     8    45        26   \n",
+       "2015-01-02                                         0     3    35        15   \n",
+       "2015-01-03                                         0     2    39        19   \n",
+       "2015-01-04                                         0     2    45        14   \n",
+       "2015-01-05                                         0     1    56        18   \n",
+       "\n",
+       "               LARCENY-THEFT  MOTOR VEHICLE THEFT  ARSON  \n",
+       "Occurred Date                                             \n",
+       "2015-01-01                54                   13      0  \n",
+       "2015-01-02                28                   16      0  \n",
+       "2015-01-03                27                    9      0  \n",
+       "2015-01-04                27                   15      0  \n",
+       "2015-01-05                30                   11      0  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seattle_final_df[crimes].sum().head()"
+   ]
   },
   {
    "cell_type": "code",
