data cleansing: standardized date column, renamed dataframes to *_df, printed out min and max date

--- a/crime_by_date/final_data_analysis.ipynb
+++ b/crime_by_date/final_data_analysis.ipynb
@@ -29,19 +29,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "austin_df = pd.read_csv('Austin/austin_by_date.csv', low_memory=False, encoding='UTF-8')\n",
     "la_df = pd.read_csv('Los_Angles_city/LA_by_date.csv',low_memory=False, encoding='UTF-8')\n",
     "nyc_df = pd.read_csv('New_York_city/NYC_by_date.csv',low_memory=False, encoding='UTF-8')\n",
-    "chicago = pd.read_csv('Chicago_City/chicago_date_group.csv',low_memory=False, encoding='UTF-8')\n",
-    "pheonix = pd.read_csv('Pheonix_City/pheonix_crimes_by_date.csv',low_memory=False, encoding='UTF-8')\n",
-    "portland = pd.read_csv('Portland_City/portland_date_group.csv',low_memory=False, encoding='UTF-8')\n",
-    "orlando = pd.read_csv('Orlando city/orlando_by_date.csv',low_memory=False, encoding='UTF-8')\n",
-    "philadelphia = pd.read_csv('Philly/philly_by_date.csv',low_memory=False, encoding='UTF-8') \n",
-    "seattle = pd.read_csv('Seattle_city/seattle_by_date.csv',low_memory=False, encoding='UTF-8')"
+    "chicago_df = pd.read_csv('Chicago_City/chicago_date_group.csv',low_memory=False, encoding='UTF-8')\n",
+    "pheonix_df = pd.read_csv('Pheonix_City/pheonix_crimes_by_date.csv',low_memory=False, encoding='UTF-8')\n",
+    "portland_df = pd.read_csv('Portland_City/portland_date_group.csv',low_memory=False, encoding='UTF-8')\n",
+    "orlando_df = pd.read_csv('Orlando city/orlando_by_date.csv',low_memory=False, encoding='UTF-8')\n",
+    "philadelphia_df = pd.read_csv('Philly/philly_by_date.csv',low_memory=False, encoding='UTF-8') \n",
+    "seattle_df = pd.read_csv('Seattle_city/seattle_by_date.csv',low_memory=False, encoding='UTF-8')\n",
+    "\n",
+    "\n",
+    "city_dfs = [austin_df, \n",
+    "            la_df, \n",
+    "            nyc_df, \n",
+    "            chicago_df, \n",
+    "            pheonix_df,\n",
+    "            portland_df, \n",
+    "            orlando_df,\n",
+    "            philadelphia_df, \n",
+    "            seattle_df] \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2015-01-01 00:00:00\n",
+      "to\n",
+      "2018-10-20 00:00:00\n",
+      "----\n",
+      "2015-01-02 00:00:00\n",
+      "to\n",
+      "2018-02-24 00:00:00\n",
+      "----\n",
+      "2015-01-01 00:00:00\n",
+      "to\n",
+      "2018-06-30 00:00:00\n",
+      "----\n",
+      "2016-01-01 00:00:00\n",
+      "to\n",
+      "2018-10-17 00:00:00\n",
+      "----\n",
+      "2015-11-01 00:00:00\n",
+      "to\n",
+      "2018-10-17 00:00:00\n",
+      "----\n",
+      "2015-01-01 00:00:00\n",
+      "to\n",
+      "2018-09-30 00:00:00\n",
+      "----\n",
+      "2015-01-01 00:00:00\n",
+      "to\n",
+      "2017-12-31 00:00:00\n",
+      "----\n",
+      "2006-01-01 00:00:00\n",
+      "to\n",
+      "2017-03-23 00:00:00\n",
+      "----\n",
+      "2015-01-01 00:00:00\n",
+      "to\n",
+      "2018-10-25 00:00:00\n",
+      "----\n"
+     ]
+    }
+   ],
+   "source": [
+    "def convert_to_timestamp(s):\n",
+    "     return datetime.datetime.strptime(s, \"%m/%d/%Y\")\n",
+    "\n",
+    "for df in city_dfs:\n",
+    "    df['timestamp'] = df['date'].apply(convert_to_timestamp)\n",
+    "    print(min(df['timestamp']))\n",
+    "    print(\"to\")\n",
+    "    print(max(df['timestamp']))\n",
+    "    print(\"----\")"
    ]
   },
   {
@@ -55,6 +126,13 @@
     "4.        Do cities with the least amount of crime experience an increase in crime that is more than noticeable during major shopping holidays? \n",
     "5.        *insert new question*. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -82,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +371,7 @@
        "18          New Year's Eve  12/31/2015  12/31/2016  12/31/2017  12/31/2018"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
