fixed variable data frames

--- a/crime_by_date/final_data_analysis.ipynb
+++ b/crime_by_date/final_data_analysis.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,15 +139,13 @@
     "austin_df[sort2016].head()\n",
     "\n",
     "austin_2016_df = austin_df[austin_df['date'].str.contains(\"2016\")]\n",
-    "la_2016_df = austin_df[austin_df['date'].str.contains(\"2016\")]\n",
-    "chicago_df_2016 = austin_df[austin_df['date'].str.contains(\"2016\")]\n",
-    "pheonix_2016_df = austin_df[austin_df['date'].str.contains(\"2016\")]\n",
-    "portland_2016_df = austin_df[austin_df['date'].str.contains(\"2016\")]\n",
-    "orlando_2016_df = austin_df[austin_df['date'].str.contains(\"2016\")]\n",
-    "philadelphia_2016_df = austin_df[austin_df['date'].str.contains(\"2016\")]\n",
-    "seattle_2016_df = austin_df[austin_df['date'].str.contains(\"2016\")]\n",
-    "\n",
-    "\n"
+    "la_2016_df = la_df[la_df['date'].str.contains(\"2016\")]\n",
+    "chicago_df_2016 = chicago_df[chicago_df['date'].str.contains(\"2016\")]\n",
+    "pheonix_2016_df = pheonix_df[pheonix_df['date'].str.contains(\"2016\")]\n",
+    "portland_2016_df = portland_df[portland_df['date'].str.contains(\"2016\")]\n",
+    "orlando_2016_df = orlando_df[orlando_df['date'].str.contains(\"2016\")]\n",
+    "philadelphia_2016_df = philadelphia_df[philadelphia_df['date'].str.contains(\"2016\")]\n",
+    "seattle_2016_df = seattle_df[seattle_df['date'].str.contains(\"2016\")]\n"
    ]
   },
   {
