wip - added Q4 to final analysis

--- a/crime_by_date_revised/final_data_analysis.ipynb
+++ b/crime_by_date_revised/final_data_analysis.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Correlation of Crime Rate Throughout the Year Correlating to Major Shopping Holidays"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Summary of Questions for analysis:\n",
     "1. Is there an increase in crime during major shopping holidays? \n",
     "2. Do cities with the least amount of crime experience an increase in crime that is more than noticeable during major shopping holidays? \n",
@@ -20,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +238,7 @@
        "18          New Year's Eve  12/31/2015  12/31/2016  12/31/2017  12/31/2018"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2077,7 +2084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -6874,25 +6881,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Question 4\n",
+    "\n",
+    "*Do the holidays have an impact on crime location?*"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Q4. Use the data from 2 cities: Chicago and New York City\n",
+    "* Chart 1: Bar chart using crime count by location description during major shopping holiday.\n",
+    "* Chart 2: Bar chart using crime count by location description during non-major shopping holiday.\n",
+    "* Analysis 1: We can determine which location type has the most occurrence of crime."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "...code and figures go here..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q4. Observation 1\n",
+    "We consider crime data from New York City major shopping days and non-major shopping holidays for the year 2016 because New York City has full location by date crime reporting. Additionally, New York City has a large population size which is helpful for sampling. By observing the Crime by Location bar charts, we can conclude that most of the crimes occurred at a residence during both major shopping holidays and non-major shopping holidays. We do not observe a holiday impact on crime location. "
+   ]
   },
   {
    "cell_type": "markdown",
